# stress_detection_v2

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  dvc.yaml  process.md  pyproject.toml
backend/: Dockerfile  app.py  pyproject.toml
frontend/: Dockerfile  app.py  pyproject.toml
src/stress_detection/: feature_pipeline.py  main.py  training_pipeline.py  utils.py
src/stress_detection/config/: main.yaml
