[project]
name = "stress-detecton-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Harish Gehlot", email = "gehloth03@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.3.2",
    "dvc>=3.62.0",
    "fastapi[standard]>=0.112.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stress_detection"]
