[project]
name = "stress-detection"
version = "0.1.0"
description = "Stress Detection Backend"
authors = [
    {name = "Harish", email = "gehloth03@gmail.com"},
]
requires-python = ">=3.10"

dependencies = [
    "uvicorn",
    "fastapi",
    "dvc>=3.62.0",
    "mlflow<3.0.0",
    "dagshub>=0.6.3",
    "supabase>=2.16.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.2",
    "feast[redis]>=0.52.0",
]
